messages/indexページのデザイン修正

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -2,6 +2,10 @@ body,html {
   height: 100%;
 }
 
+a {
+  text-decoration: none;
+}
+
 #wrapper {
   height: 100vh;
   width: 100%;
@@ -132,6 +136,7 @@ body,html {
       }
 
       .container {
+        min-height: 80vh;
         background-color: $gray_chat;
         padding: 121px 40px 89px;
 
