.strftimeで時刻表記整えた

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -2,6 +2,6 @@
   %p.message__name<
     = message.user.name
     %span<
-      = message.created_at
+      = message.created_at.strftime('%Y年%m月%d日 %H:%M:%S')
   %p.message__text<
     = message.text
