--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,7 +1,7 @@
 #wrapper
   #side-bar
     .header
-      %p<
+      %p#user-name<
         = current_user.name
         %span.icons
           = link_to destroy_user_session_path, method: :delete do
@@ -30,7 +30,7 @@
               %li.buttons__list<
                 Edit
       .container
-        %ul
+        %ul#messages
           = render @messages
       .form-wrapper
         = form_for [@group, @message] do |f|
