group#new&editページデザイン編集

--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -9,14 +9,16 @@
       = f.label 'チャットメンバーを追加', 'チャットメンバーを追加', class: 'chat-group-form__label'
     .chat-group-form__field--right
       .chat-group-form__search.clearfix
-        = collection_check_boxes(:group, :user_ids, User.all, :id, :name) do |b|
-          = b.label { b.check_box + b.text }
+        %input#user-search-field.chat-group-form__input{:placeholder => "追加したいユーザー名を入力してください", :type => "text"}/
       #user-search-result
-  - unless @group[:id].nil?
+  - if @group[:id]
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
-        = f.label 'チャットメンバー', 'チャットメンバー', class: 'chat-group-form__label'
+        = f.label 'チャットメンバー', class: 'chat-group-form__label'
+      .chat-group-form__field--right
+        #chat-group-users
+          #chat-group-user-22.chat-group-user.clearfix
+            %input{:name => "chat_group[user_ids][]", :type => "hidden", :value => "22"}/
+            %p.chat-group-user__name seo_kyohe
   .chat-group-form__field.clearfix
-    .chat-group-form__field--left
-    .chat-group-form__field--right
-      = f.submit 'Save', class: 'chat-group-form__action-btn'
+    = f.submit 'Save', class: 'chat-group-form__action-btn'
