--- a/app/assets/stylesheets/group.scss
+++ b/app/assets/stylesheets/group.scss
@@ -61,7 +61,7 @@
     display: block;
     line-height: 50px;
     font-weight: bold;
-    text-align: right;
+    text-align: center;
   }
 
   &__input {
@@ -98,10 +98,12 @@
   }
 
   &__action-btn {
+    width: 100%;
     display: inline-block;
     padding: 12px 20px;
     color: $white;
     background-color: $vivid-blue;
     border: 0;
+    margin: 10px 0;
   }
 }
