--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -20,12 +20,6 @@
             = hidden_field_tag 'group[user_ids][]', current_user.id
             %p.chat-group-user__name
               = current_user.name
-          - @group.users.each do |user|
-            - if(user.id != current_user.id)
-              .chat-group-user.clearfix
-                = hidden_field_tag 'group[user_ids][]', user.id
-                %p.chat-group-user__name
-                  = user.name
-                  = content_tag "a", '削除', class: "user-search-remove chat-group-user__btn chat-group-user__btn--remove", data: { user: { id: user.id }}
+          = render @group.users
   .chat-group-form__field.clearfix
     = f.submit 'Save', class: 'chat-group-form__action-btn'
