--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -3,4 +3,4 @@
     = hidden_field_tag 'group[user_ids][]', user.id
     %p.chat-group-user__name
       = user.name
-      = content_tag "a", '削除', class: "user-search-remove chat-group-user__btn chat-group-user__btn--remove", data: { user: { id: user.id }}
+      = content_tag "span", '削除', class: "user-search-remove chat-group-user__btn chat-group-user__btn--remove", data: { user: { id: user.id }}
