--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -6,17 +6,20 @@
       = f.text_field :name, placeholder: 'グループ名を入力してください', class: 'chat-group-form__input', id: 'chat_group_name'
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
-      = f.label 'チャットメンバーを追加', 'チャットメンバーを追加', class: 'chat-group-form__label'
+      = f.label 'チャットメンバーを追加', class: 'chat-group-form__label'
     .chat-group-form__field--right
       .chat-group-form__search.clearfix
-        = collection_check_boxes(:group, :user_ids, User.all, :id, :name) do |b|
-          = b.label { b.check_box + b.text }
+        %input#user-search-field.chat-group-form__input{ placeholder: '追加したいユーザー名を入力してください', type: 'text' }
       #user-search-result
-  - unless @group[:id].nil?
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
-        = f.label 'チャットメンバー', 'チャットメンバー', class: 'chat-group-form__label'
+        = f.label :name, "チャットメンバー", class: "chat-group-form__label"
+      .chat-group-form__field--right
+        #chat-group-users
+          .chat-group-user.clearfix
+            = hidden_field_tag 'group[user_ids][]', current_user.id
+            %p.chat-group-user__name
+              = current_user.name
+          = render @group.users
   .chat-group-form__field.clearfix
-    .chat-group-form__field--left
-    .chat-group-form__field--right
-      = f.submit 'Save', class: 'chat-group-form__action-btn'
+    = f.submit 'Save', class: 'chat-group-form__action-btn'
