--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -3,5 +3,8 @@
     = message.user.name
     %span<
       = message.created_at.strftime('%Y年%m月%d日 %H:%M:%S')
-  %p.message__text<
-    = message.text
+  - if message.text
+    %p.message__text<
+      = message.text
+  - if message.image
+    = image_tag(message.image)
